--- a/data/Agglomerative-Test.html
+++ b/data/Agglomerative-Test.html
@@ -23,6 +23,18 @@ var _dot = function(a,b){
 	return d;
 }
 
+var _find_centroid = function(c) {
+	var centroid = [];
+	for (var i = 0 ; i < data[0].length ; i++){
+		var _c = 0;
+		for (var j = 0 ; j < c.length ; j++){
+			_c += data[c[j]][i];
+		}
+		centroid.push(_c/c.length);
+	}
+	return centroid;
+}
+
 var data;
 var dist;
 var metric;
@@ -94,6 +106,8 @@ var _correlation = function(a,b){
 // not implemented yet: ward
 
 var _single = function (u,v){
+	var u = u.items;
+	var v = v.items;
 	var min = Number.MAX_SAFE_INTEGER
 	u.forEach(function(i){
 		v.forEach(function(j){
@@ -104,6 +118,8 @@ var _single = function (u,v){
 }
 
 var _complete = function (u,v){
+	var u = u.items;
+	var v = v.items;
 	var max = 0;
 	u.forEach(function(i){
 		v.forEach(function(j){
@@ -114,6 +130,8 @@ var _complete = function (u,v){
 }
 
 var _average = function (u,v){
+	var u = u.items;
+	var v = v.items;
 	var s = 0;
 	var l = 0;
 	u.forEach(function(i){
@@ -126,21 +144,28 @@ var _average = function (u,v){
 }
 
 var _centroid = function(u,v){
-	var centroid_u = [];
-	var centroid_v = [];
-	for (var i = 0 ; i < data[0].length ; i++){
-		_u = 0;
-		_v = 0;
-		for (var j = 0 ; j < u.length ; j++){
-			_u += data[u[j]][i];
-		}
-		for (var k = 0 ; k < v.length ; k++){
-			_v += data[v[k]][i];
-		}
-		centroid_u.push(_u/u.length);
-		centroid_v.push(_v/v.length);
+	if (!u.centroid){
+		u.centroid = _find_centroid(u.items);
 	}
-	return dist(centroid_u, centroid_v)
+	if (!v.centroid){
+		v.centroid = _find_centroid(v.items);
+	}
+	return dist(u.centroid, v.centroid)
+}
+
+var _median = function(u,v){
+	if (u.items.length = 1){
+		u.metric = data[u.items[0]];
+	}
+	if (v.items.length = 1){
+		v.metric = data[v.items[0]];
+	}
+	var median = [];
+	for (var i = 0 ; i < data[0].length ; i++){
+		median.push((u.metric[i] + v.metric[i]) / 2);
+	}
+	return median
+
 }
 
 //set the params here
@@ -157,7 +182,7 @@ metric = _centroid;
 function init(data){
 	var init_clusters = [];
 	for (var i = 0; i< data.length ; i++){
-		init_clusters.push({"items":[i], "children":[]});
+		init_clusters.push({"items":[i], "children":[], "metric":undefined});
 	}
 	return init_clusters;
 }
@@ -174,7 +199,7 @@ function step(clusters){
 	for (var i = 0 ; i < n_clusters ; i++){
 		for (var j = i ; j < n_clusters ; j++){
 			if (i!=j){
-				var closeness = metric(clusters[i].items, clusters[j].items);
+				var closeness = metric(clusters[i], clusters[j]);
 				if (closeness < min){
 					a = i;
 					b = j;
@@ -187,7 +212,7 @@ function step(clusters){
 	//merge two closest clusters A and B
 	var clusterA = clusters[a];
 	var clusterB = clusters[b];
-	var merged = {"items":(clusterA.items).concat(clusterB.items), "children":[clusterA,clusterB]};
+	var merged = {"items":(clusterA.items).concat(clusterB.items), "children":[clusterA,clusterB], "metric":min};
 	new_clusters.push(merged);
 	return new_clusters;
 }
