--- a/data/demo.html
+++ b/data/demo.html
@@ -8,12 +8,18 @@
 
 
 	<body>
+		<div id='algo' style='font-size: 30; text-align: center'>SPECTRAL</div>
 		<svg></svg>
-		<button id='cluster'>Cluster</button>
+		<div style='margin:auto; display:block; width: 420px'>
+			<button on-click='algo_change(0)'>Spectral</button>
+			<button on-click='algo_change(1)'>Spectral</button>
+			<button on-click='algo_change(2)'>Spectral</button>
+			<button on-click='algo_change(3)'>Spectral</button>
+		<div>
 	</body>
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="vis.js"></script>
-	
+
 
 </html>
