algo wow colors

--- a/data/demo.html
+++ b/data/demo.html
@@ -10,11 +10,11 @@
 	<body>
 		<div id='algo' style='font-size: 30; text-align: center'>SPECTRAL</div>
 		<svg></svg>
-		<div style='margin:auto; display:block; width: 420px'>
-			<button on-click='algo_change(0)'>Spectral</button>
-			<button on-click='algo_change(1)'>Spectral</button>
-			<button on-click='algo_change(2)'>Spectral</button>
-			<button on-click='algo_change(3)'>Spectral</button>
+		<div style='margin:auto; display:block; width: 480px'>
+			<button id='gaussian'>Gaussian</button>
+			<button id='spectral'>Spectral</button>
+			<button id='agglomerative'>Agglomerative</button>
+			<button id='kmeans'>KMeans</button>
 		<div>
 	</body>
 
