--- a/data/demo.html
+++ b/data/demo.html
@@ -8,15 +8,21 @@
 
 
 	<body>
-		<div id='algo' style='font-size: 30; text-align: center'>SPECTRAL</div>
-		<svg></svg>
-		<div style='margin:auto; display:block; width: 480px'>
-			<button id='gaussian'>Gaussian</button>
-			<button id='spectral'>Spectral</button>
-			<button id='agglomerative'>Agglomerative</button>
-			<button id='kmeans'>KMeans</button>
-		<div>
+		<div style='width:1000; float:left'>
+			<div id='algo' style='font-size: 30; text-align: center'>SPECTRAL</div>
+			<svg></svg>
+			<div style='margin:auto; display:block; width: 480px'>
+				<button id='gaussian'>Gaussian</button>
+				<button id='spectral'>Spectral</button>
+				<button id='agglomerative'>Agglomerative</button>
+				<button id='kmeans'>KMeans</button>
+			</div>
+		</div>
+		<div id='textbox'>
+			<div id='innertext'><div>
+		</div>
 	</body>
+
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="vis.js"></script>
