--- a/data/demo.html
+++ b/data/demo.html
@@ -15,12 +15,17 @@
 				<button id='gaussian'>Gaussian</button>
 				<button id='spectral'>Spectral</button>
 				<button id='agglomerative'>Agglomerative</button>
-				<button id='kmeans'>KMeans</button>
+				<button id='kmeans'>K-Means</button>
 			</div>
 		</div>
 		<div id='textbox'>
-			<div id='innertext'><div>
+			<div style='height:500' id='innertext'></div>
+			<center>Highlight a journalist:<br>
+            <input style='font-family: arial-black' type="text" id="myVal">
+						<button id='Select' style='margin-top:10px; margin-left:5px'>Select</button>
+        </form></center>
 		</div>
+
 	</body>
 
 
