--- a/data/demo.html
+++ b/data/demo.html
@@ -5,7 +5,75 @@
 	</head>
 
 	<link rel="stylesheet" href="style.css" type="text/css" property="stylesheet">
+	<style>
+	/* Popup container - can be anything you want */
+	.popup {
+	    position: relative;
+	    display: inline-block;
+	    cursor: pointer;
+	    -webkit-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
+	}
 
+	/* The actual popup */
+	.popup .popuptext {
+	    visibility: hidden;
+	    width: 600px;
+	    background-color: #555;
+	    color: #fff;
+	    text-align: center;
+	    border-radius: 6px;
+	    padding: 8px 0;
+	    position: absolute;
+	    z-index: 1;
+	    bottom: 125%;
+	    left: 50%;
+	    margin-left: -300px;
+	}
+
+	/* Popup arrow */
+	.popup .popuptext::after {
+	    content: "";
+	    position: absolute;
+	    top: 100%;
+	    left: 50%;
+	    margin-left: -5px;
+	    border-width: 5px;
+	    border-style: solid;
+	    border-color: #555 transparent transparent transparent;
+	}
+
+	/* Toggle this class - hide and show the popup */
+	.popup .show {
+	    visibility: visible;
+	    -webkit-animation: fadeIn 1s;
+	    animation: fadeIn 1s;
+	}
+
+	/* Add animation (fade in the popup) */
+	@-webkit-keyframes fadeIn {
+	    from {opacity: 0;}
+	    to {opacity: 1;}
+	}
+
+	@keyframes fadeIn {
+	    from {opacity: 0;}
+	    to {opacity:1 ;}
+	}
+	</style>
+	</head>
+
+
+
+	<script>
+	// When the user clicks on div, open the popup
+	function myFunction() {
+	    var popup = document.getElementById("myPopup");
+	    popup.classList.toggle("show");
+	}
+	</script>
 
 	<body>
 		<div style='width:1000; float:left'>
@@ -16,7 +84,17 @@
 				<button id='spectral'>Spectral</button>
 				<button id='agglomerative'>Agglomerative</button>
 				<button id='kmeans'>K-Means</button>
+
+			</div><br>
+			<center>
+			<div style='width:100%' class="popup" onclick="myFunction()">Learn more
+				<span class="popuptext" id="myPopup">
+					We aimed to observe the relationships between various political journalists through machine learning.<br><br>
+					Each node represents a political journalist.<br><br>
+					The distance between two nodes represents their "similarity", using shared followers as the primary metric.
+					</span>
 			</div>
+			</center>
 		</div>
 		<div id='textbox'>
 			<div style='height:500' id='innertext'></div>
