--- a/data/demo.html
+++ b/data/demo.html
@@ -1,5 +1,5 @@
 <html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<head>
 		<title> Scatterplot </title>
 	</head>
@@ -77,19 +77,19 @@
 
 	<body>
 		<div style='width:1000; float:left'>
-			<div id='algo' style='font-size: 30; text-align: center'>SPECTRAL</div>
-			<svg></svg>
+			<div style='font-size: 4.5vh; text-align: center'>Clustering Of Political Journalists On Twitter</div>
+			<div id='algo' style='color: 	#585858; font-size: 2vh; text-align: center'>Currently using: Spectral Clustering</div>
+			<center><svg></svg></center>
 			<div style='margin:auto; display:block; width: 480px'>
 				<button id='gaussian'>Gaussian</button>
 				<button id='spectral'>Spectral</button>
 				<button id='agglomerative'>Agglomerative</button>
 				<button id='kmeans'>K-Means</button>
-
 			</div><br>
 			<center>
 			<div style='width:100%' class="popup" onclick="myFunction()">Learn more
 				<span class="popuptext" id="myPopup">
-					We aimed to observe the relationships between various political journalists through machine learning.<br><br>
+					We aimed to observe the relationships between various political journalists through unsupervised machine learning.<br><br>
 					Each node represents a political journalist.<br><br>
 					The distance between two nodes represents their "similarity", using shared followers as the primary metric.
 					</span>
@@ -97,7 +97,8 @@
 			</center>
 		</div>
 		<div id='textbox'>
-			<div style='height:500' id='innertext'></div>
+			<div style='height:500' id='innertext'>
+			</div>
 			<center>Highlight a journalist:<br>
             <input style='font-family: arial-black' type="text" id="myVal">
 						<button id='Select' style='margin-top:10px; margin-left:5px'>Select</button>
