expand agglomerative and case insensitive search

--- a/data/demo.html
+++ b/data/demo.html
@@ -77,8 +77,8 @@
 
 	<body>
 		<div style='width:1000; float:left'>
-			<div style='font-size: 4.5vh; text-align: center'>Clustering Of Political Journalists On Twitter</div>
-			<div id='algo' style='color: 	#585858; font-size: 2vh; text-align: center'>Currently using: Spectral Clustering</div>
+			<div style='font-size: 32; text-align: center'>Clustering Of Political Journalists On Twitter</div>
+			<div id='algo' style='color: 	#585858; font-size: 14; text-align: center'>Currently using: Spectral Clustering</div>
 			<center><svg></svg></center>
 			<div style='margin:auto; display:block; width: 480px'>
 				<button id='gaussian'>Gaussian</button>
