--- a/final-vis/force-directed.html
+++ b/final-vis/force-directed.html
@@ -38,7 +38,7 @@ svg{
 </style>
 <body>
 <div class = "card centered" width = "800" height = "900">
-<h1> CDS DV - Social Tribes - Force-Directed Visualization</h1>
+<h1> CDS DV - Social Tribes - Force Directed Network Visualization</h1>
 <p>Explanation for Links: Each node is connected with the node most similar to it. In addition, two nodes with a similarity score above a the threshold will be connected. Adjust the slider to change the threshold.</p>
 <div class = "card slidercontainer">
 <input style = "width: 400px;" type="range" min="35" max="100" value="100" class="slider" id="threshold">
