--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<!DOCTYPE html>
+<meta charset="utf-8">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<body>
 <h1> CDS DV - Social Tribes - Index </h1>
-<a href = "./final-vis/clusters.html">clusters visualization</a>
-<br>
-<a href = "./final-vis/dendrograms.html">dendrograms</a>
-<br>
-<a href = "./final-vis/force-directed.html">force-directed layout</a>
-<br>
-<a href = "">agglomerative clustering</a>
+<ul>
+	<li><a href = "./final-vis/clusters.html">clusters visualization</a></li>
+	<li><a href = "./final-vis/dendrograms.html">dendrograms</a></li>
+	<li><a href = "./final-vis/force-directed.html">force-directed layout</a></li>
+	<li><a href = "">agglomerative clustering</a></li>
+</ul>
+</body>
