--- a/final-vis/force-directed.html
+++ b/final-vis/force-directed.html
@@ -35,6 +35,11 @@ svg{
   background-color:white;
 }
 
+.autocomplete-suggestions { border: 1px solid #999; background: white; cursor: default; overflow: auto; }
+.autocomplete-suggestion { padding: 10px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: silver; }
+.autocomplete-suggestions strong { font-weight: normal;}  
+
 </style>
 <body>
 <div class = "card centered" width = "800" height = "900">
@@ -43,9 +48,12 @@ svg{
 <div class = "card slidercontainer">
 <input style = "width: 400px;" type="range" min="35" max="100" value="100" class="slider" id="threshold">
 <span id = "th"> Threshold: 1.0</span>
+<div>Highlight specific person: <input id="searchbar" type="text" placeholder="search people"></div>
 </div>
 <svg width="760" height="760"></svg>
 </div>
 <script src="//d3js.org/d3.v4.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src='./jquery.autocomplete.min.js'></script>
 <script src = "./force-directed.js"></script>
 </body>
