started work on animated agglomerative vis

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 
 <body>
 <h1> CDS DV - Social Tribes - Index </h1>
+<h2> Select a visualization to learn more </h2>
 <ul>
 	<li><a href = "./final-vis/clusters.html">clusters visualization</a></li>
 	<li><a href = "./final-vis/dendrograms.html">dendrograms</a></li>
 	<li><a href = "./final-vis/force-directed.html">force-directed layout</a></li>
-	<li><a href = "">agglomerative clustering</a></li>
+	<li><a href = "./final-vis/agglomerative-clustering.html">agglomerative clustering</a></li>
 </ul>
 </body>
