--- a/final-vis/agglomerative-clustering.html
+++ b/final-vis/agglomerative-clustering.html
@@ -42,25 +42,98 @@
 <svg width="760" height="760"></svg>
 </div>
 <script>
+
 var auto = false;
 var clusters;
+var coords;
 //set the params here
 dist = _euclidean;
 metric = _centroid;
 
+var xScale = d3.scaleLinear()
+	.range([0, 760])
+	.domain([-3, 3]);
+var yScale = d3.scaleLinear()
+		.range([760,0])
+		.domain([-1.5, 1.5])
+
+var interval = 250;
+
+var rScale = d3.scaleSqrt().domain([1,432]).range([5,300]);
+var oScale = d3.scaleLinear().domain([1,432]).range([0.3,0.9]);
+
+var find_centroid = function(items) {
+	var _x = 0;
+	var _y = 0;
+	for (var i = 0 ; i < items.length ; i++){
+		_x += coords[items[i]][0];
+		_y += coords[items[i]][1];
+	}
+	return [_x/items.length, _y/items.length];
+}
+
+var svg = d3.select("svg"),
+    width = +svg.attr("width"),
+    height = +svg.attr("height");
+
+var node = svg.selectAll(".node");
+
 //draw current clusters, call step again in 1 second
-function step(){
-	console.log('step');
-	if (auto){setTimeout(step,1000);}
+function step_(){
+	if(clusters.length < 2){
+		auto = false;
+		toggle.checked = false;
+		alert('clustering is complete')
+	} else {
+		clusters = step(clusters);
+		svg.selectAll(".node").remove();
+	    node.data(clusters)
+	      .enter().append("circle")
+		  .attr("class","node")
+		  .attr("r", function(d,i){
+		  	if (i == clusters.length - 1){
+		  		return rScale(d["items"].length * 0.75);
+		  	} else {
+		  		return rScale(d["items"].length);
+		  	}
+		  })
+		  .style("opacity", function(d){return oScale(d["items"].length);})
+		  .attr("fill","gray")
+		  .attr("cx", function(d){
+		  	return xScale(find_centroid(d["items"])[0]);
+		  })
+		  .attr("cy", function(d){
+		  	return yScale(find_centroid(d["items"])[1]);
+		  })
+		  .transition().duration(interval/2).attr("r",function(d){
+		  	return rScale(d["items"].length);
+		  });
+	}
+	if (auto){setTimeout(step_,interval);}
 }
 
 function start(){
-	d3.text("similarity.csv",function(error,csvdata){
+	d3.queue()
+	.defer(d3.text, 'similarity.csv')
+	.defer(d3.csv, 'pca.csv')
+	.await(function (error, csvdata, components){
 	  data = d3.csvParseRows(csvdata, function(row){
 	    return row.map(x => Number(x));
 	  });
+	  coords = components.map(function(x){return [Number(x["Comp1"]),Number(x["Comp2"])]});
 	  clusters = init(data);
-	  step();
+	  node.data(clusters)
+		  .enter().append("circle")
+		  .attr("class","node")
+		  .attr("r",5)
+		  .attr("fill","gray")
+		  .style("opacity", 0.3)
+		  .attr("cx", function(d,i){
+		  	return xScale(find_centroid(d["items"])[0]);
+		  })
+		  .attr("cy", function(d,i){
+		  	return yScale(find_centroid(d["items"])[1]);
+		  });
 	});
 }
 
@@ -68,26 +141,28 @@ function start(){
 var toggle = document.getElementById('toggle_auto');
 toggle.addEventListener('change', function(a){
 	auto = a.target.checked;
-	if (auto){step();} else{clearTimeout(step);}
+	if (auto){step_();} else{clearTimeout(step_);}
 	
 });
 
 var startbtn = document.getElementById('start');
 startbtn.addEventListener('click', function(a){
-	clearTimeout(step);
+	clearTimeout(step_);
 	auto = false;
 	toggle.checked = false;
-	start();
+	svg.selectAll(".node").remove();
+	setTimeout(start,interval);
 });
 
 var stepbtn = document.getElementById('step');
 stepbtn.addEventListener('click', function(a){
-	clearTimeout(step);
-	if(!auto){step(clusters);}
+	clearTimeout(step_);
+	if(!auto){step_();}
 	auto = false;
 	toggle.checked = false;
 });
 
+start();
 </script>
 </body>	
 </html>
