--- a/data/demo.html
+++ b/data/demo.html
@@ -20,12 +20,12 @@
 	/* The actual popup */
 	.popup .popuptext {
 	    visibility: hidden;
-	    width: 600px;
+	    width: 650px;
 	    background-color: #555;
 	    color: #fff;
 	    text-align: center;
 	    border-radius: 6px;
-	    padding: 8px 0;
+	    padding: 8px 15px;
 	    position: absolute;
 	    z-index: 1;
 	    bottom: 125%;
@@ -91,8 +91,10 @@
 				<span class="popuptext" id="myPopup">
 					We aimed to observe the relationships between various political journalists through unsupervised machine learning.<br><br>
 					Each node represents a political journalist.<br><br>
-					All nodes belonging in the same cluster share the same color (the actual colors have no significance).<br><br>
-					The distance between two nodes represents their "similarity", using shared followers as the primary metric.
+					All nodes belonging to the same cluster share the same color (the actual colors have no significance).<br><br>
+					The distance between two nodes represents their "similarity", using shared followers as the primary metric.<br><br>
+					A Cornell Data Science Project by: <br>
+					Kevin Ngo, Shalin Mehta, Danny Yang, Max Chen, Sam Kitterman
 					</span>
 			</div>
 			</center>
