--- a/final-vis/clusters.html
+++ b/final-vis/clusters.html
@@ -4,7 +4,8 @@
 		<title> Social Tribes </title>
 	</head>
 
-	<link rel="stylesheet" href="style.css" type="text/css" property="stylesheet">
+	<link rel="stylesheet" href="clusters.css" type="text/css" property="stylesheet">
+<link rel="stylesheet" href="styles.css" type="text/css" property="stylesheet">
 	<style>
 	/* Popup container - can be anything you want */
 	.popup {
@@ -20,17 +21,17 @@
 	/* The actual popup */
 	.popup .popuptext {
 	    visibility: hidden;
-	    width: 600px;
+	    width: 650px;
 	    background-color: #555;
 	    color: #fff;
 	    text-align: center;
 	    border-radius: 6px;
-	    padding: 8px 0;
+	    padding: 8px 15px;
 	    position: absolute;
 	    z-index: 1;
 	    bottom: 125%;
 	    left: 50%;
-	    margin-left: -300px;
+	    margin-left: -325px;
 	}
 
 	/* Popup arrow */
@@ -77,17 +78,17 @@
 
 	<body>
 		<div style='width:1000; float:left'>
-			<div style='font-size: 4.5vh; text-align: center'>Clustering Of Political Journalists On Twitter</div>
-			<div id='algo' style='color: 	#585858; font-size: 2vh; text-align: center'>Currently using: Spectral Clustering</div>
+			<div style='font-size: 34; text-align: center; font-family: NeueMontreal; font-weight: 500'>Clustering Of Political Journalists On Twitter</div>
+			<div id='algo' style='color: 	#585858; font-size: 14; text-align: center'>Currently using: Spectral Clustering</div>
 			<center><svg></svg></center>
-			<div style='margin:auto; display:block; width: 480px'>
+			<div style='margin:auto; display:block; width: 405px'>
 				<button id='gaussian'>Gaussian</button>
 				<button id='spectral'>Spectral</button>
 				<button id='agglomerative'>Agglomerative</button>
 				<button id='kmeans'>K-Means</button>
 			</div><br>
 			<center>
-			<div style='width:100%' class="popup" onclick="myFunction()">Learn more
+			<div style='width:100%; font-size:18' class="popup" onclick="myFunction()"><b>Learn more</b>
 				<span class="popuptext" id="myPopup">
 					We aimed to observe the relationships between various political journalists through unsupervised machine learning.<br><br>
 					Each node represents a political journalist.<br><br>
@@ -98,20 +99,21 @@
 			</center>
 		</div>
 		<div id='textbox' style='position: relative'>
-			<div style='height:500;  width:360; color: 		#505050; position: absolute' id='innerinst'><br><br><br><br><br><br><br><br><br><br><center>Hover over a node <br>to view more details</center></div>
+			<div style='height:500;  width:360; color: 		#505050; position: absolute' id='innerinst'><br><br><br><br><br><br><br><br><br><br><br><center>Hover over a node <br>to view more details</center></div>
 			<div style='height:500;  width:360; background-color:#E8E8E8; position: absolute' id='innertext'>
 			</div>
-			<center><div style='margin-top:510px;'>Highlight a journalist:<br>
-            <input style='font-family: arial-black' type="text" id="myVal">
+			<center><div style='margin-top:510px;'><b>Highlight a journalist:</b><br>
+            <input style='font-family: Yantramanav; font-size:14;width: 200; height:25px' type="text" id="myVal">
 						<button id='Select' style='margin-top:10px; margin-left:5px'>Select</button>
         </form></div></center>
 		</div>
 
 	</body>
 
-
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+	<script src='./jquery.autocomplete.min.js'></script>
 	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="vis.js"></script>
+	<script src="clusters.js"></script>
 
 
 </html>
