--- a/final-vis/force-directed.html
+++ b/final-vis/force-directed.html
@@ -21,13 +21,7 @@
   padding: 20px;
 }
 
-svg{
-  display:block;
-  margin:auto;
-}
-
 .slidercontainer {
-  display:block;
   margin:auto;
 }
 
@@ -42,15 +36,18 @@ svg{
 
 </style>
 <body>
-<div class = "card centered" width = "800" height = "900">
-<h1> CDS DV - Social Tribes - Force Directed Network Visualization</h1>
-<p>Explanation for Links: Each node is connected with the node most similar to it. In addition, two nodes with a similarity score above a the threshold will be connected. Adjust the slider to change the threshold.</p>
+<div class = "centered">
+<h1> CDS DV - Social Tribes - Force Directed Network Visualization</h1><hr><br>
+</div>
+<div class = "row">
+<div class = "col-md-6" style="padding-left:75px" ><svg width="760" height="760"></svg></div>
+<div class = "col-md-4">
 <div class = "card slidercontainer">
-<input style = "width: 400px;" type="range" min="35" max="100" value="100" class="slider" id="threshold">
-<span id = "th"> Threshold: 1.0</span>
+<p>Each node is connected with the node most similar to it. In addition, two nodes with a similarity score above a the threshold will be connected. Adjust the slider to change the threshold.</p>
+<input style = "width: 400px;" type="range" min="35" max="100" value="100" class="slider" id="threshold"><span id = "th"> Threshold: 1.0</span>
 <div>Highlight specific person: <input id="searchbar" type="text" placeholder="search people"></div>
 </div>
-<svg width="760" height="760"></svg>
+</div>
 </div>
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
