--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="./final-vis/styles.css" type="text/css" property="stylesheet">
 
-<body>
-<h1> CDS DV - Social Tribes - Index </h1>
-<h2> Select a visualization to learn more </h2>
+<body style='text-align:center'>
+	<img src='cds.png' style='height: 100px; margin:20px'></img>
+	<div>
+	<div style='font-family: NeueMontreal; font-size:36px;font-weight:300; font-style:italic'> Data Visualization Subteam </div><br>
+	<div style='font-size:60px; height:40px;line-height:40px;border-style: solid;'>Social Tribes</div><br>
+	<div style='font-size:20px'> Max Chen, Sam Kitterman, Shalin Mehta, Kevin Ngo, Danny Yang </div>
+	</div>
 <ul>
 	<li><a href = "./final-vis/clusters.html">clusters visualization</a></li>
 	<li><a href = "./final-vis/dendrograms.html">dendrograms</a></li>
