--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" href="./final-vis/styles.css" type="text/css" property="stylesheet">
 
 <body style='text-align:center'>
-	<img src='cds.png' style='height: 100px; margin:20px'></img>
+	<img src='cds.png' style='height: 100px; margin:40px; margin-top:100px'></img>
 	<div>
-	<div style='font-family: NeueMontreal; font-size:36px;font-weight:300; font-style:italic'> Data Visualization Subteam </div><br>
-	<div style='font-size:60px; height:40px;line-height:40px;border-style: solid;'>Social Tribes</div><br>
-	<div style='font-size:20px'> Max Chen, Sam Kitterman, Shalin Mehta, Kevin Ngo, Danny Yang </div>
+	<div style='font-family: NeueMontreal; font-size:55px; width:100%; line-height:80px; margin:5px 0px;'>Social Tribes<br>
+		<div style='font-family: Yantramanav; font-size:20px; line-height:10px; margin-bottom:20px'> Max Chen, Sam Kitterman, Shalin Mehta, Kevin Ngo, Danny Yang </div></div>
 	</div>
+<div style='background-color:blue'></div>
 <ul>
 	<li><a href = "./final-vis/clusters.html">clusters visualization</a></li>
 	<li><a href = "./final-vis/dendrograms.html">dendrograms</a></li>
