--- a/final-vis/clusters.html
+++ b/final-vis/clusters.html
@@ -103,9 +103,9 @@
 			<div style='height:500;  width:360; background-color:#E8E8E8; position: absolute' id='innertext'>
 			</div>
 			<center><div style='margin-top:510px;'><b>Highlight a journalist:</b><br>
-            <input style='font-family: Yantramanav; font-size:14;width: 200; height:25px' type="text" id="myVal">
+            <input style='font-family: Yantramanav; font-size:14;width: 200; height:25px' type="text" id="myVal" placeholder="search people">
 						<button id='Select' style='margin-top:10px; margin-left:5px'>Select</button>
-        </form></div></center>
+        </div></center>
 		</div>
 
 	</body>
