--- a/final-vis/force-directed.html
+++ b/final-vis/force-directed.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="styles.css" rel="stylesheet">
 <style>
 
 .node {
@@ -40,7 +41,7 @@
 <h1> CDS DV - Social Tribes - Force Directed Network Visualization</h1><hr><br>
 </div>
 <div class = "row">
-<div class = "col-md-6" style="padding-left:75px" ><svg width="760" height="760"></svg></div>
+<div class = "col-md-7" style="padding-left:75px" ><svg width="760" height="760"></svg></div>
 <div class = "col-md-4">
 <div class = "card slidercontainer">
 <p>Each node is connected with the node most similar to it. In addition, two nodes with a similarity score above a the threshold will be connected. Adjust the slider to change the threshold.</p>
