--- a/final-vis/agglomerative-clustering.html
+++ b/final-vis/agglomerative-clustering.html
@@ -5,6 +5,7 @@
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src = "./agglomerative-clustering.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
