--- a/final-vis/dendrograms.html
+++ b/final-vis/dendrograms.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="//d3js.org/d3.v4.min.js"></script>
+<link href="styles.css" rel="stylesheet">
 <style>
 
 .link {
@@ -30,7 +31,8 @@
 }
 
 </style>
-<h1 class = "centered" > CDS DV - Social Tribes - Dendrograms Visualizations</h1><hr><br>
+<body>
+<h1> CDS DV - Social Tribes - Dendrograms Visualizations</h1><hr><br>
 <div class = "row">
   <div class = "vis col-md-7"><svg width="900" height="800"></svg></div>
   <div class = "col-md-4">
@@ -52,3 +54,4 @@
   </div>
 </div>
 <script src = "./dendrograms.js"></script>
+</body>
