--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 	}
 
 </style>
-<body style='text-align:center'>
+
+<script>
+function load(){
+		document.body.style.zoom=(document.documentElement.clientWidth / 2000);
+}
+</script>
+
+<body onload='load()' style='text-align:center'>
 	<img src='images/cds.png' style='height: 80px; margin-top:7vh; margin-bottom:1vh'></img>
 	<div style='margin-bottom:7vh;'>
 	<div style='font-family: NeueMontreal; font-size:55px; width:100%; line-height:80px; margin:5px 0px;'>Social Tribes<br>
-		<div style='font-family: Yantramanav; font-size:20px; line-height:10px; margin-bottom:20px'> Max Chen, Sam Kitterman, Shalin Mehta, Kevin Ngo, Danny Yang </div></div>
+		<div style='font-family: Yantramanav; font-size:20px; line-height:24px; margin-bottom:20px'> <i>An analysis of the connections between 432 political journalists on Twitter. (<a href='write-up/writeup.html'>Write-Up</a>)</i> <br>Max Chen, Sam Kitterman, Shalin Mehta, Kevin Ngo, Danny Yang </div></div>
 	</div>
 	<div class="row">
 		<div class="col-md-3">
